# lightbeam

./: .gitignore  AOtele.py  LICENSE  LPmodes.py  Lightbeam.ipynb  PIAA.py  README.md  compute_coupling.py  config.py  config_batch.py  config_example.py  conv.py  geom.py  make_coupling_plots.py  maxcouple.py  mesh.py  misc.py  old_snippets.py  optics.py  prop.py  pyproject.toml  run_bpm_example.py  runbpm.py  runbpm_batch.py  runbpm_dep.py  scratch.py  screen.py  setup.cfg  test.py  zernike.py
src/lightbeam/: AOtele.py  LPmodes.py  PIAA.py  geom.py  mesh.py  misc.py  optics.py  prop.py  screen.py  zernike.py
tutorial/: Lightbeam.ipynb  config_example.py  convergence.npy  convergence.py  run_bpm_example.py
