[metadata]
name = lightbeam
version = 0.0.1
author = Jonathan Lin
author_email = jon880@g.ucla.edu
description = A lightweight beam propagator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jw-lin/lightbeam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src